fixed overflow-x bug on mobile, fixed vw for slide animation

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   @include mixins.flex(column, true);
   row-gap: 60px;
+  position: relative;
 }
 
 @mixin style(
