--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,8 +9,9 @@
   box-sizing: border-box;
 }
 
-html {
-  overflow-x: hidden;
+html,
+body {
+  overflow: hidden visible;
 }
 
 html,
@@ -20,6 +21,10 @@ body,
 .max-div {
   height: 100%;
   width: 100%;
+}
+
+.App {
+  position: relative;
 }
 
 html,
